--- a/css/gps.css
+++ b/css/gps.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 .controlHolder {
-	width: 250px;
+	width: 253px;
 	position: relative;
 	top: -100px;
 	float: left;
@@ -18,6 +18,7 @@
 	border-right: 1px solid black;
 	border-top: 1px solid black;	
 	background: #f9f9f9;
+	overflow: scroll;
 }
 
 .map {
@@ -26,3 +27,102 @@
 	border-top: 1px solid black;
 	background: #09C;
 }
+
+.button {
+	display: inline-block;
+	outline: none;
+	width: 250px;
+	height: 40px;
+	cursor: pointer;
+	text-align: center;
+	text-decoration: none;
+	font: 24px/100% Arial, Helvetica, sans-serif;
+	padding: 15px 0 0 0;
+	text-shadow: .5px .5px 1px rgba(40,2,255,1);
+	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.2);
+	-moz-box-shadow: 0 1px 2px rgba(0,0,0,.2);
+	box-shadow: 0 1px 2px rgba(0,0,0,.2);
+}
+.button:hover {
+	text-decoration: none;
+}
+
+.black {
+	color: #a7bdff;
+	border: solid 1px #333;
+	background: #333;
+	background: -webkit-gradient(linear, left top, left bottom, from(#666), to(black));
+	background: -moz-linear-gradient(top, #666, black);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#666666',
+	endColorstr='#000000');
+}
+
+.black:hover {
+	background: black;
+	background: -webkit-gradient(linear, left top, left bottom, from(#444), to(black));
+	background: -moz-linear-gradient(top, #444, black);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#444444',
+	endColorstr='#000000');
+}
+
+.black:active {
+	color: #666;
+	background: -webkit-gradient(linear, left top, left bottom, from(black), to(#444));
+	background: -moz-linear-gradient(top, black, #444);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000',
+	endColorstr='#666666');
+}
+
+/* Stop */
+.trucks .top-box {
+	background: #333;
+	background: -webkit-gradient(linear, left top, left bottom, from(#888888), to(#5c5c5c));
+	background: -moz-linear-gradient(top, #888888, #5c5c5c);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#888888',
+	endColorstr='#5c5c5c');	
+}
+
+.trucks li {
+	border-top: 1px solid black;
+	background: #ffffff;
+	background: -webkit-gradient(linear, left top, left bottom, from(#c5c5c5), to(#ffffff));
+	background: -moz-linear-gradient(top, #e8e8e8, #ffffff);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#e8e8e8',
+	endColorstr='#ffffff');
+}
+
+.trucks .date-drop {
+	color: #ffffff;
+	font-size: 14pt;
+	width: 185px;
+	margin: auto;
+	padding: 10px 0 15px 0;
+}
+
+.trucks select {
+	font-size: 12pt;
+}
+
+.trucks li p {
+	cursor: default;
+	padding-left: 5px;
+}
+
+.trucks li span {
+	display: inline-block;
+	float: right;
+	width: 100px;
+}
+
+.trucks .id {
+	color: #ffffff;
+	font-size: 14pt;
+	text-shadow: .5px .5px 1px rgba(0,0,0,1);
+	text-align: center;
+	padding-top: 10px;
+}
+
+.trucks ul:last-child {
+	padding-bottom: 20px;
+}
+
